2011-07-19  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* Makefile.in (CYGWIN_BINS): Add getconf.
	(getconf.c): New file.

2011-06-14  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* mingw: Force use of bash.

2011-05-29  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* ps.cc (ttynam): Accommodate new console numbering.
	(main): Ditto.

2011-05-03  Corinna Vinschen  <corinna@vinschen.de>

	* locale.cc (print_locale_with_codeset): Align printing of locale names
	to POSIX.

2011-04-18  Corinna Vinschen  <corinna@vinschen.de>

	* setfacl.c (getaclentry): Allow extra colon in mask and other entries.

2011-04-12  Jon TURNEY  <jon.turney@dronecode.org.uk>

        * utils.sgml (strace): Fix a pair of exchanged lines in usage text.

2011-04-04  Corinna Vinschen  <corinna@vinschen.de>

	* passwd.c (main): Add the ability to specify a username for the -R
	command.
	* utils.sgml: Document the aforementioned change.

2011-02-29  Corinna Vinschen  <corinna@vinschen.de>

	* regtool.cc (cmd_set): Avoid a compiler warning.

2011-02-29  Corinna Vinschen  <corinna@vinschen.de>

	* cygcheck.cc (handle_unique_object_name): Avoid a compiler warning.
	(dump_sysinfo): Ditto.
	* loadlib.h (_load_sys_library): Mark as used, to avoid a compiler
	warning.
	* path.cc (oopt): Gurad with !FSTAB_ONLY to avoid a compiler warning.
	(read_flags): Ditto.

2011-02-28  Corinna Vinschen  <corinna@vinschen.de>

	* setfacl.c (strchrnul): Drop local implementation.

2011-02-15  Corinna Vinschen  <corinna@vinschen.de>

	* cygcheck.cc: Fix copyright dates.

2011-01-10  Jon TURNEY  <jon.turney@dronecode.org.uk>

	* cygcheck.cc (main): don't imply -d from -s option to cygcheck

2010-12-11  Corinna Vinschen  <corinna@vinschen.de>

	* setfacl.c (strchrnul): New function.
	(getaclentry): Rewrite.

2010-12-06  Corinna Vinschen  <corinna@vinschen.de>

	* cygpath.cc (get_device_name): Fix path length test.

2010-10-30  Dmitry Potapov  <dpotapov@gmail.com>
